--- a/index.html
+++ b/index.html
@@ -120,4 +120,179 @@ function parseReceiptText(text) {
       rowDate = dateMatch[1].replace(/\s+/g,''); // e.g. "4/9" or "15/09"
       // normalize to dd/mm/yyyy-ish (we only have day/month) -> keep as dd/mm
       // if month missing zero-pad
-      const parts = row
+      const parts = rowDate.split(/[\/\-]/).map(s=>s.trim());
+      let d = parts[0].padStart(2,'0');
+      let m = parts[1].padStart(2,'0');
+      currentDate = `${d}/${m}`; // store as dd/mm
+    }
+
+    // if not date line but maybe description or continuation, we still parse
+    // find amounts
+    const amounts = [];
+    let m;
+    while ((m = amountRe.exec(raw)) !== null) {
+      amounts.push(m[1]);
+    }
+
+    // find type e.g. (cash) or (Tf)
+    const typeMatch = raw.match(typeRe);
+    const payType = typeMatch ? typeMatch[1].replace(/[.:]/g,'').trim() : '';
+
+    // build description: remove date, amounts, parentheses and separators
+    let desc = raw;
+    if (dateMatch) desc = desc.replace(dateMatch[0],'');
+    desc = desc.replace(typeRe,'');
+    // remove found amount tokens from the description to leave only text
+    if (amounts.length) {
+      amounts.forEach(a => { desc = desc.replace(a,''); });
+    }
+    // remove extra separators
+    desc = desc.replace(/[-–:\|]+/g,' ').replace(/\s{2,}/g,' ').trim();
+
+    // determine debit/credit
+    let debit = '', credit = '';
+    if (amounts.length === 1) {
+      // likely debit column (your sample shows debit amounts)
+      debit = normalizeAmount(amounts[0]);
+    } else if (amounts.length >= 2) {
+      // pick first as debit, last as credit heuristic
+      debit = normalizeAmount(amounts[0]);
+      credit = normalizeAmount(amounts[amounts.length-1]);
+    }
+
+    // if desc ends up empty and no amounts, skip
+    if (!desc && !debit && !credit) continue;
+
+    results.push({
+      Date: currentDate || '',
+      Description: desc,
+      Debit: debit,
+      Credit: credit,
+      Type: payType,
+      Raw: raw
+    });
+  }
+
+  return results;
+}
+
+async function ocrFile(file, onProgress) {
+  const worker = Tesseract.createWorker({
+    logger: m => {
+      if (m.status === 'recognizing text' && onProgress) onProgress(Math.round(m.progress*100));
+    }
+  });
+  await worker.load();
+  await worker.loadLanguage('eng');
+  await worker.initialize('eng');
+  const { data: { text } } = await worker.recognize(file);
+  await worker.terminate();
+  return text;
+}
+
+// process selected files
+processBtn.addEventListener('click', async () => {
+  const files = filesEl.files;
+  if (!files || files.length === 0) { alert('Select at least one image file'); return; }
+  statusEl.textContent = `Processing ${files.length} file(s)... this may take a few moments (OCR runs locally).`;
+  rawTextEl.textContent = '';
+  parsedRows = [];
+
+  for (let i=0;i<files.length;i++) {
+    const file = files[i];
+    statusEl.textContent = `OCR: processing ${file.name} (${i+1}/${files.length})...`;
+    try {
+      const text = await ocrFile(file, p => statusEl.textContent = `OCR ${file.name}: ${p}%`);
+      rawTextEl.textContent += `--- ${file.name} ---\n` + text + '\n\n';
+      // parse
+      const parsed = parseReceiptText(text);
+      // attach source file name
+      parsed.forEach(r => r.SourceFile = file.name);
+      parsedRows = parsedRows.concat(parsed);
+      statusEl.textContent = `Processed ${file.name} — parsed ${parsed.length} rows`;
+    } catch (err) {
+      console.error(err);
+      statusEl.textContent = `Error OCR ${file.name}: ${err.message||err}`;
+    }
+  }
+
+  statusEl.textContent = `All files processed — total rows parsed: ${parsedRows.length}`;
+  renderTable();
+});
+
+// render editable HTML table
+function renderTable() {
+  if (parsedRows.length === 0) {
+    tableWrap.innerHTML = '<div class="small">No parsed rows yet.</div>';
+    return;
+  }
+  let html = '<table><thead><tr><th>#</th><th>Date</th><th>Description</th><th>Debit</th><th>Credit</th><th>Type</th><th>Source</th></tr></thead><tbody>';
+  parsedRows.forEach((r, idx) => {
+    html += `<tr>
+      <td class="center">${idx+1}</td>
+      <td contenteditable="true">${r.Date||''}</td>
+      <td contenteditable="true">${escapeHtml(r.Description||'')}</td>
+      <td contenteditable="true">${r.Debit||''}</td>
+      <td contenteditable="true">${r.Credit||''}</td>
+      <td contenteditable="true">${r.Type||''}</td>
+      <td>${r.SourceFile||''}</td>
+    </tr>`;
+  });
+  html += '</tbody></table>';
+  html += '<div class="note">Tip: you can edit cells directly. After edits, click <strong>Download Excel</strong>.</div>';
+  tableWrap.innerHTML = html;
+}
+
+// helper to escape HTML in cell initial values
+function escapeHtml(s){
+  return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;');
+}
+
+// download current table to Excel
+downloadBtn.addEventListener('click', () => {
+  // read back table values (user may have edited)
+  const table = tableWrap.querySelector('table');
+  if (!table) { alert('No table to export'); return; }
+  const rows = [];
+  const trs = table.querySelectorAll('tbody tr');
+  trs.forEach(tr => {
+    const cells = tr.querySelectorAll('td');
+    rows.push({
+      Date: cells[1].innerText.trim(),
+      Description: cells[2].innerText.trim(),
+      Debit: cells[3].innerText.trim(),
+      Credit: cells[4].innerText.trim(),
+      Type: cells[5].innerText.trim(),
+      SourceFile: cells[6].innerText.trim()
+    });
+  });
+
+  // convert Debit/Credit strings to numbers if possible
+  const cleaned = rows.map(r => ({
+    Date: r.Date,
+    Description: r.Description,
+    Debit: r.Debit ? Number(normalizeAmount(r.Debit)) : '',
+    Credit: r.Credit ? Number(normalizeAmount(r.Credit)) : '',
+    Type: r.Type,
+    SourceFile: r.SourceFile
+  }));
+
+  const ws = XLSX.utils.json_to_sheet(cleaned, {header:["Date","Description","Debit","Credit","Type","SourceFile"]});
+  const wb = XLSX.utils.book_new();
+  XLSX.utils.book_append_sheet(wb, ws, "Transactions");
+  const fname = `transactions_${(new Date()).toISOString().slice(0,19).replace(/[:T]/g,'-')}.xlsx`;
+  XLSX.writeFile(wb, fname);
+});
+
+// clear
+clearBtn.addEventListener('click', () => {
+  parsedRows = [];
+  rawTextEl.textContent = '—';
+  tableWrap.innerHTML = '';
+  filesEl.value = '';
+  statusEl.textContent = 'Cleared.';
+});
+
+</script>
+</body>
+</html>
