--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     h2 { color: #c2185b; }
-    #rawOutput { width: 100%; height: 120px; border: 1px solid #ccc; padding: 8px; overflow-y: auto; background: #f9f9f9; }
+    #rawOutput { width: 100%; height: 200px; border: 1px solid #ccc; padding: 8px; overflow-y: auto; background: #f9f9f9; white-space: pre-wrap; }
     table { border-collapse: collapse; margin-top: 10px; width: 100%; }
     th, td { border: 1px solid #ccc; padding: 6px; }
     input { margin-top: 10px; }
@@ -18,10 +18,11 @@
   <h2>Florista Sekar — Receipt OCR → Excel</h2>
   <input type="file" id="fileInput" accept="image/*">
   <button id="processBtn">Process Selected</button>
+  <button id="parseBtn">Parse to Table</button>
   <button id="downloadBtn">Download Excel</button>
   <button id="clearBtn">Clear All</button>
 
-  <h3>Raw OCR output</h3>
+  <h3>Raw OCR output (from JPG/PNG)</h3>
   <div id="rawOutput">-</div>
 
   <h3>Parsed rows</h3>
@@ -32,7 +33,9 @@
 
   <script>
     let parsedData = [];
+    let ocrText = "";
 
+    // Step 1: Run OCR
     document.getElementById("processBtn").addEventListener("click", function() {
       let file = document.getElementById("fileInput").files[0];
       if (!file) {
@@ -40,17 +43,25 @@
         return;
       }
 
-      document.getElementById("rawOutput").innerText = "⏳ Processing...";
+      document.getElementById("rawOutput").innerText = "⏳ Running OCR...";
 
       Tesseract.recognize(file, 'eng').then(({ data: { text } }) => {
+        ocrText = text;
         document.getElementById("rawOutput").innerText = text;
-
-        // Split OCR output into lines
-        let lines = text.split("\n").filter(l => l.trim() !== "");
-        parsedData = lines.map(line => line.split(/\s+/)); // split by spaces
-
-        renderTable(parsedData);
+        alert("✅ OCR finished. Check Raw OCR output box.");
       });
+    });
+
+    // Step 2: Parse OCR text into table (basic version)
+    document.getElementById("parseBtn").addEventListener("click", function() {
+      if (!ocrText) {
+        alert("No OCR text available. Run Process Selected first.");
+        return;
+      }
+
+      let lines = ocrText.split("\n").filter(l => l.trim() !== "");
+      parsedData = lines.map(line => line.split(/\s+/)); // split by whitespace
+      renderTable(parsedData);
     });
 
     function renderTable(data) {
@@ -61,16 +72,14 @@
 
       if (data.length === 0) return;
 
-      // Simple header
-      let headerRow = "<tr>";
       let maxCols = Math.max(...data.map(row => row.length));
+      let headerRow = "<tr>";
       for (let i = 0; i < maxCols; i++) {
         headerRow += `<th>Col ${i+1}</th>`;
       }
       headerRow += "</tr>";
       tableHead.innerHTML = headerRow;
 
-      // Fill rows
       data.forEach(row => {
         let tr = "<tr>";
         for (let i = 0; i < maxCols; i++) {
@@ -81,7 +90,7 @@
       });
     }
 
-    // Download Excel
+    // Step 3: Download Excel
     document.getElementById("downloadBtn").addEventListener("click", function() {
       if (parsedData.length === 0) {
         alert("No data to export.");
@@ -101,12 +110,13 @@
       XLSX.writeFile(wb, "receipt_data.xlsx");
     });
 
-    // Clear everything
+    // Step 4: Clear everything
     document.getElementById("clearBtn").addEventListener("click", function() {
       document.getElementById("rawOutput").innerText = "-";
       document.querySelector("#dataTable thead").innerHTML = "";
       document.querySelector("#dataTable tbody").innerHTML = "";
       parsedData = [];
+      ocrText = "";
     });
   </script>
 </body>
